log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
        - name: file-volume
          configMap:
            name: file-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: log-writer
          image: us-central1-docker.pkg.dev/dwk-gke-505002/log-repo/log-writer:v1
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/shared
        - name: log-reader
          image: us-central1-docker.pkg.dev/dwk-gke-505002/log-repo/log-reader:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/shared
            - name: file-volume
              mountPath: /usr/src/app/config
