log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 2345
      targetPort: 5000
