log_output/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-pong-route
  namespace: exercises
spec:
  parentRefs:
    - name: external-http-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /status
      backendRefs:
        - name: log-output-svc
          port: 2345

    - matches:
        - path:
            type: PathPrefix
            value: /pingpong
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: pong-app-svc
          port: 2346

    - matches:
        - path:
            type: Exact
            value: /ping
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /pingpong
            statusCode: 302
