log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: exercises
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    # - host: log-output.local  <-- Commented out because it is not needed for GKE Ingress
    - http:
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  number: 2345
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pong-app-svc
                port:
                  number: 2346
